fix: save metadata on v4 api crd import
see https://gravitee.atlassian.net/browse/GKO-226

(cherry picked from commit 3d7322000216681de61eb6ef11c5a3b80a583037)